--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,7 +43,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-          fetch-depth: 0
+      - name: Git submodule update
+        run: |
+          git pull --recurse-submodules
+          git submodule update --remote --recursive        
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
