--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://pgraverdy.github.io/hugo-comingsoon/'
+baseURL = 'https://pgraverdy.github.io/hugo-comingsoon/'
 languageCode = 'en-us'
 theme = 'coming-soon'
 
