--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = 'https://pgraverdy.github.io/hugo-comingsoon/'
 languageCode = 'en-us'
 theme = 'coming-soon'
+canonifyURLs = true
 
 [params]
     title = "The Maestro Consortium"
